--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +85,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Mitr', sans-serif;
 }
 
 body {
@@ -93,6 +96,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    font-family: 'Mitr', sans-serif;
 }
 
 a {
